--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "webpack-notifier": "^1.4.1"
   },
   "dependencies": {
+    "eventemitter3": "^3.0.1",
     "pixi.js": "^4.7.3"
   },
   "private": false,
